--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "aepo-lsx-child",
+  "name": "minimal-lsx-child",
   "version": "1.0.0",
-  "description": "AEPO LSX Child Theme",
+  "description": "MINIMAL LSX Child Theme",
   "main": "gulpfile.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/lightspeeddevelopment/aepo-lsx-child.git"
+    "url": "git+https://github.com/lightspeeddevelopment/minimal-lsx-child.git"
   },
   "keywords": [
     "lsx",
     "child",
     "theme",
-    "aepo"
+    "minimal"
   ],
   "author": "LightSpeed",
   "license": "GPL-3.0",
   "bugs": {
-    "url": "https://github.com/lightspeeddevelopment/aepo-lsx-child/issues"
+    "url": "https://github.com/lightspeeddevelopment/minimal-lsx-child/issues"
   },
   "dependencies": {
     "gulp": "^3.9.1",
