--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gulp-uglify": "^2.0.1",
     "gulp-util": "^3.0.8",
     "gulp-wp-pot": "^2.3.1",
+    "hoek": "^4.2.1",
     "jshint": "^2.9.4",
     "map-stream": "^0.0.7"
   }
